--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
     <div class="conteiner">
-        <div id="mensagem">
-            <p id="texto">
-                Olá, Mundo!!!
-            </p>
+        <div id="engrenagens">
+            <div class="roda">
+                <span class="text">&#x2699;&#xFE0F</span>
+            </div>
+            <div class="roda">
+                <span class="text">&#x2699;&#xFE0F</span>
+            </div>
+            <div class="roda">
+                <span class="text">&#x2699;&#xFE0F</span>
+            </div>
         </div>
 
         <div id="numeros">
             <input type="text" name="Number" id="number" value=0 disabled>
-            <button onclick="soma()" id="Number">Clique</button>
+            <button onclick="soma()" onmouseover="paraRoda()" id="Number">Clique</button>
         </div>
     </div>
 </body>
